tests/negative/generics/call_generic.orng
// call_generic.orng:6:15: error: symbol `generic_fn` requires 1 generic argument
//     generic_fn()
//              ^
// 
fn main() -> Int {
    generic_fn()
}

fn generic_fn[T]() -> Int {
    400
}
